package com.ritense.iko.mvc.model

data class Source(
    var id: String,
    var name: String
)