---
title: IKO Domain model
---
classDiagram
    note for Relation "Defines the mapping between a source and a endpoint"
    note for Endpoint "Predefined way to search in a source, likely to be Beans in IKO"
    note for AggregatedDataProfile "AggregatedDataProfile is dataview+transformation over a Primary source entity (Endpoint) and its related data (Secondary source entities)"
    note for Source "Predefined target for endpoint, like a database or a file. Likely to be Beans in IKO"

    class AggregatedDataProfile {
        +Id: string
        +Name: string
        +addTransformation()
        +addRole()
    }

    class Role {
        +Name: string
    }

    class Transformation {
        +JQ: string
    }

    class Endpoint {
        +Id: string
        +Name: string
        +addTransformation()
    }

    class Relation {
        +Id: string
        +aggregatedDataProfileId: string
        +sourceId: string
        +sourceToEndpointMapping: Map<string, string>
        +transform: string
    }

    class Source {
        +Id: string
        +Name: string
        +Type: string
    }

    AggregatedDataProfile --> "*" Transformation: applies
    AggregatedDataProfile --> "*" Role: has
    AggregatedDataProfile --> "1" Source: must have
    AggregatedDataProfile --> "*" Relation: at least one
    Endpoint --> "1" Source: one to one
    Source --> "*" Endpoint: supports many
    Endpoint --> "1" Transformation: applies
    Relation --> "1" Endpoint: links

    class AggregatedDataProfile {
        <<AggregateRoot>>
    }

    class Endpoint {
        <<AggregateRoot>>
    }

    class Transformation {
        <<ValueObject>>
    }

    class Role {
        <<ValueObject>>
    }

    class Relation {
        <<Entity>>
    }

    class Source {
        <<ValueObject>>
    }